--- a/style.css
+++ b/style.css
@@ -14,3 +14,40 @@ body{
     color:deeppink;
     font-size: 25px;
 }
+h1
+{
+  font-family: 'Special Elite', fantasy;
+  color:rgb(243, 225, 59);
+  background-color: rgb(248, 166, 204);
+}
+
+#show_sketch
+{
+  float:right;
+}
+
+canvas 
+  {
+    border:5px solid white;
+    border-radius:20px;
+    margin-top:150px;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes example {
+
+  from {box-shadow: 1px 1px 38px rgb(250, 15, 54);}
+  to {box-shadow: 1px 1px 38px rgb(231, 137, 137);}
+
+}
+
+
+p, span
+  {
+    padding-top:10px;
+    font-family: 'Special Elite', fantasy;
+    font-size:25px;
+    
+  }
